progress at yellow deli for round 5 (final?) iteration for scope

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -1,5 +1,5 @@
 template(name='comments')
-    .ui.fluid.accordion
+    .ui.fluid.styled.accordion
         .active.title
             .ui.grey.header
                 //- i.chat.icon
