--- a/client/camera.jade
+++ b/client/camera.jade
@@ -1,7 +1,9 @@
 template(name='camera')
     .camera
         video#video Video stream not available.
-        button#startbutton Take photo
+        button.ui.button#startbutton take photo
+        button.ui.button.take_picture take photo 2
     canvas#canvas
-    .output
-        img#photo(alt='The screen capture will appear in this box.')
+    
+    //- .output
+    //-     img#photo(alt='The screen capture will appear in this box.')
