--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -91,7 +91,7 @@ template(name='user_edit')
                             //- .ui.hidden.divider
                         //- +pdf_edit key='member_guidelines_and_waiver' icon='signature' label='member guidelines and waiver' direct=true
                         .ui.hidden.divider
-                
+                        +boolean_edit key='active_violations' label='active violations' direct=true
                         //- if is_staff
                         //-     //- with user_from_username_param
                         //-     +boolean_edit key='government_id_checked' label='government id checked' icon='id-verified' direct=true
