--- a/client/staff.jade
+++ b/client/staff.jade
@@ -1,23 +1,23 @@
 template(name='staff')
     .ui.stackable.padded.grid
-        .four.wide.column
-            h1.ui.center.aligned.grey.header 
+        .sixteen.wide.column
+            h1.ui.grey.inline.header 
                 //- i.user.shield.icon
-                +i name='manager'
+                //- +i name='manager'
                 |staff
             //- i.massive.loading.brown.poo.icon
-            a.ui.fluid.big.compact.basic.button(href='/add_resident')
+            a.ui.big.compact.basic.button(href='/add_resident')
                 //- i.user.add.large.icon
                 +i name='add-user-male' classes='ui inline image'
                 strong add resident
-            .ui.header
+            .ui.inline.header
                 |#{checkedin_members.count} checked in members
-            +add_button model='work_order' label='work order'
-            +add_button model='communication' label='communication'
-            +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
-            +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
-            +unit_key_widget
-        .twelve.wide.column
+            //- +add_button model='work_order' label='work order'
+            //- +add_button model='communication' label='communication'
+            //- +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
+            //- +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
+            //- +unit_key_widget
+            //- .twelve.wide.column
             +inline_doc slug='staff_notices' classes='ui small grey header'
             .ui.styled.fluid.accordion
                 .active.title
@@ -75,13 +75,19 @@ template(name='hc_session')
                 //- +number_view key='unit_number' label='unit #' direct=true
                 //- +text_view key='building_code' label='building code' direct=true
                 +lease_expiration_check
-                +rules_and_regs_check
-                +user_check_steps        
-            if checkin_guest_docs.length
+                //- +rules_and_regs_check
+                +user_check_steps 
+                if active_violations
+                    .ui.big.red.label active violation(s)
+                if staff_notes
+                    .ui.small.grey.header
+                        i.clipboard.icon(title='staff notes')
+                        |#{staff_notes}       
+            if checkin_guest_docs.count
                 .ui.small.grey.header guests
                 each checkin_guest_docs
                     .ui.large.basic.label 
-                        |#{first_name} #{last_name}
+                        |#{guest_name}
             if user_is_resident
                 +date_view key='start_date' label='start date' direct=true
                 +date_view key='expiration_date' label='expiration date' direct=true
