--- a/components/rent.jade
+++ b/components/rent.jade
@@ -8,15 +8,16 @@ template(name='rentals')
             
 template(name='rental')
     .ui.segment
-        +datetime_edit key='start_time'
-        +datetime_edit key='end_time'
-        +range_edit
-        .ui.header selected start time #{start_datetime}
-        .ui.header selected end time #{end_datetime}
-        .ui.button.calculate_diff diff
-        .ui.header hours #{rental_hours}
-        .ui.header hourly rental price $#{hourly_rental_price}
-        .ui.header days #{rental_days}
-        .ui.header daily rental price $#{daily_rental_price}
-        .ui.icon.button.delete_rental
-            i.remove.icon
+        unless confirmed
+            //- +datetime_edit key='start_time'
+            //- +datetime_edit key='end_time'
+            +range_edit
+            .ui.button.calculate_diff diff
+            .ui.icon.button.delete_rental
+                i.remove.icon
+                
+        .ui.header from {{long_date start_datetime}} to {{long_date end_datetime}}
+        +boolean_edit key='confirmed' label='confirmed' direct=true
+        .ui.header #{rental_hours} hours at $#{../hourly_rate}/hour totaling $#{hourly_rental_price}
+        if rental_days
+            .ui.header #{rental_days} days at $#{daily_rental_price}/day
