--- a/client/watson.jade
+++ b/client/watson.jade
@@ -50,7 +50,7 @@ template(name='doc_emotion')
 template(name='call_watson')
     #call_watson.ui.basic.big.button 
         i.chess.knight.icon
-        |call watson
+        |analyze
 
 
 
