add upcoming calendar to staff page, calendar updates, still can't view events

--- a/client/shop.jade
+++ b/client/shop.jade
@@ -176,6 +176,7 @@ template(name='shop_stats')
     +product_transactions
 
 template(name='shop_rentals')
+    +cal
     +rentals
                         
 template(name='shop_chat')                        
